@@ -3,6 +3,9 @@ NEWS - OpenPrinting CUPS Filters v1.0.41 - 2013-10-30
 
 CHANGES IN V1.0.42
 
+	- pdftoraster: Take into account rotate field in PDF header,
+	  when pdftopdf rotates a page to fit the paper it sets the
+	  rotate field and does not swap the width and height entries.
 	- pdftoippprinter: Made PCL 5c/e printing working correctly,
 	  by first adding support for unprintable margins and
 	  defaulting to 12pt margins if no margin info is supplied,
